[gd_scene load_steps=8 format=3 uid="uid://dfx5r8m5kk4m3"]

[ext_resource type="Script" path="res://Escenas/Levels/Typing.gd" id="1_wa3io"]
[ext_resource type="Shader" path="res://Shaders/Background.gdshader" id="2_wu1km"]
[ext_resource type="Texture2D" uid="uid://6b01de046frf" path="res://Assets/background.jpg" id="3_7q0al"]
[ext_resource type="PackedScene" uid="uid://ddut4m4fe23hq" path="res://HUD.tscn" id="4_wwwi8"]
[ext_resource type="PackedScene" uid="uid://cqrrcnmanbe3p" path="res://Characters/Player.tscn" id="5_kscau"]
[ext_resource type="Texture2D" uid="uid://dsceos4t2gnbq" path="res://Assets/mecanografia.jpg" id="6_d5crg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1quhv"]
shader = ExtResource("2_wu1km")

[node name="Demo" type="Node"]
script = ExtResource("1_wa3io")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_1quhv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -552.0
offset_right = 372.0
offset_bottom = -253.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7q0al")
expand_mode = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("4_wwwi8")]

[node name="EnemyContainer" type="Node2D" parent="."]
position = Vector2(1234, 309)

[node name="SpawnContainer" type="Node2D" parent="."]
position = Vector2(1215, 303)

[node name="Position" type="Marker2D" parent="SpawnContainer"]
position = Vector2(-40, 0)

[node name="Player" parent="." instance=ExtResource("5_kscau")]
position = Vector2(48, 264)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 345.0
offset_right = 1280.0
offset_bottom = 745.0
color = Color(0.84375, 0.84375, 0.84375, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 20.0
offset_top = 384.0
offset_right = 1573.0
offset_bottom = 1011.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_d5crg")
stretch_mode = 4

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
